@@ -1,9 +1,8 @@
-# Copyright 1999-2013 Gentoo Foundation
+# Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-fonts/anonymous-pro/anonymous-pro-1.002.ebuild,v 1.2 2013/10/21 12:06:06 grobian Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-fonts/anonymous-pro/anonymous-pro-1.002-r1.ebuild,v 1.2 2015/03/07 13:14:15 yngwin Exp $
 
-EAPI=3
-
+EAPI=5
 inherit font
 
 MY_PN="AnonymousPro"
@@ -14,17 +13,12 @@ SRC_URI="http://www.ms-studio.com/FontSales/${MY_P}.zip"
 
 LICENSE="OFL-1.1"
 SLOT="0"
-KEYWORDS="~amd64 ~x86 ~x64-macos"
+KEYWORDS="amd64 arm ~arm64 x86 ~x64-macos"
 IUSE=""
 
 DEPEND="app-arch/unzip"
-RDEPEND=""
+RESTRICT="binchecks strip"
 
+S="${WORKDIR}/${MY_P}.001"
+FONT_S="${S}"
 FONT_SUFFIX="ttf"
-FONT_S="${WORKDIR}/${MY_P}.001"
-DOCS="FONTLOG.txt README.txt"
-
-S=${FONT_S}
-
-# Only installs fonts.
-RESTRICT="strip binchecks"
