@@ -1,13 +1,13 @@
 DEFINED_PHASES=install postinst postrm setup
-DEPEND=X? ( x11-apps/mkfontdir media-fonts/encodings )
+DEPEND=app-arch/unzip X? ( x11-apps/mkfontdir media-fonts/encodings )
 DESCRIPTION=Monospaced truetype font designed with coding in mind
-EAPI=2
+EAPI=5
 HOMEPAGE=http://www.ms-studio.com/FontSales/anonymouspro.html
 IUSE=X
-KEYWORDS=~amd64 ~x86
+KEYWORDS=amd64 arm ~arm64 x86 ~x64-macos
 LICENSE=OFL-1.1
-RESTRICT=strip binchecks
+RESTRICT=binchecks strip
 SLOT=0
-SRC_URI=http://www.ms-studio.com/FontSales/AnonymousPro.zip -> anonymous-pro-1.001.zip
+SRC_URI=http://www.ms-studio.com/FontSales/AnonymousPro-1.002.zip
 _eclasses_=eutils	998e5931fb95b10a6a11ec796ada2759	font	b3239d2dc442d1717b9725e2be7cb5d6	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	a3db8057ea0903a9ebea4e46aab28ff9
-_md5_=3c7d29da649822a6e2fbfd7de8b84a80
+_md5_=9f0a2b1511b4fba5bf6e0579dff74b7f
