@@ -1,6 +1,15 @@
 # ChangeLog for media-fonts/anonymous-pro
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-fonts/anonymous-pro/ChangeLog,v 1.5 2013/10/21 12:06:06 grobian Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/media-fonts/anonymous-pro/ChangeLog,v 1.7 2015/03/07 13:14:15 yngwin Exp $
+
+  07 Mar 2015; Ben de Groot <yngwin@gentoo.org> -anonymous-pro-1.001.ebuild,
+  -anonymous-pro-1.002.ebuild, anonymous-pro-1.002-r1.ebuild:
+  mark stable; remove old
+
+*anonymous-pro-1.002-r1 (07 Mar 2015)
+
+  07 Mar 2015; Ben de Groot <yngwin@gentoo.org> +anonymous-pro-1.002-r1.ebuild:
+  Update ebuild to EAPI=5
 
   21 Oct 2013; Fabian Groffen <grobian@gentoo.org> anonymous-pro-1.002.ebuild:
   Marked ~x64-macos, bug #486818
